fix footer z-index

--- a/sources/table/index.scss
+++ b/sources/table/index.scss
@@ -326,6 +326,7 @@ button {
 
 .abris-table__footer {
   bottom: 0;
+  z-index: 9;
 }
 
 .icon-equal {
